<resources>
    <string name="app_name">Village Banking</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="main_share">4</string>
    <string name="loan_application">Loan Application: </string>
    <string name="main_charges">25000</string>
    <string name="shares">Shares: </string>
    <string name="forgotPIN"><u>Forgot PIN</u></string>
    <string name="shares_payment">Shares</string>
    <string name="penalty_payment">Penalty Payment</string>
    <string name="loan_repayment">Loan Repayment</string>
    <string name="cash_in">Cash In</string>
    <string name="loan_payout">Loan Payout</string>
    <string name="cash_out">Cash Out</string>
    <string name="share_out">Share Out</string>
    <string name="bank_account">Bank Account</string>
    <string name="statement">Statement</string>
    <string name="administrator">Administrator</string>
    <string name="charges">Charges:</string>
    <string name="main_id">ID</string>
    <string name="account_details_shares">SHARES</string>
    <string name="account_details_loan_application">LOAN APPLICATION</string>
    <string name="account_details_name">Account Name</string>
    <string name="account_details_share_value">8</string>
    <string name="account_details_loan_application_amount">8000</string>
    <string name="account_holders_menu_search">Search</string>
    <string name="account_holders_menu_add">Add</string>
    <string name="account_holders_menu_all_accounts">All Accounts</string>
    <string name="account_holders_menu_admins">Admins</string>
    <string name="account_details_charges">CHARGES</string>
    <string name="transaction_charge_amount">2000</string>
    <string name="transaction_share_date">TextView</string>
    <string name="textview">TextView</string>
    <string name="out_of">|</string>
    <string name="delete">Delete</string>
    <string name="info">Banking info</string>
    <string name="personal_notes_rules"><![CDATA[Personal Notes & Rules]]></string>
    <string name="arrears">Arrears</string>
    <string name="share">Share</string>
    <string name="loans_payout">Loans Payout</string>
    <string name="loans_repayment">Loans Repayment</string>
    <string name="chargesMenu">Charges</string>
    <string name="delete_all">Delete All</string>
    <string name="accounts">Accounts</string>
</resources>