<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchName"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/account_holders_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/addAccountHolder"
        android:title="@string/account_holders_menu_add"
        app:showAsAction="always"
        android:icon="@drawable/ic_add_account_holder"/>


            <item
                android:id="@+id/approveAll"
                android:title="Approve All"
                android:icon="@drawable/ic_account_holders"/>
            <item
                android:id="@+id/ViewAll"
                android:title="@string/account_holders_menu_all_accounts"
                android:icon="@drawable/ic_account_holders"/>

            <item
                android:id="@+id/ViewAdmins"
                android:title="@string/account_holders_menu_admins"
                android:icon="@drawable/ic_admin"/>



    <item
        android:id="@+id/arrears"
        android:title="@string/arrears"
        android:icon="@drawable/ic_money"/>


    <item
        android:id="@+id/delAllAccountHolders"
        android:title="@string/delete_all"
        android:icon="@drawable/ic_delete_all"/>


</menu>